--- a/shippable.yml
+++ b/shippable.yml
@@ -6,6 +6,10 @@ php:
   - 5.4
 #  - 5.5
   #- 5.6
+env:
+global:
+- APP_NAME=obscure-citadel
+
 
 services:
   - mongodb
@@ -19,9 +23,10 @@ script:
   - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage tests/ConnectToMongoTest.php
 after_script:
   - cp README.md ./shippable
-  
-after_success:
-- echo "success"
+
+after_success :
+  - git push -f git@heroku.com:$APP_NAME.git master
+
 after_failure:
 - echo "failed"
  
